force-app/main/default/objects/Cleanup_Rules_Settings__c/Cleanup_Rules_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cleanup Rules Custom Settings</label>
</CustomObject>