force-app/main/default/objects/Cleanup_Rules_Settings__c/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <label>ClientID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>