force-app/main/default/objects/Cleanup_Rules_Settings__c/fields/Days_After_DOI_Reminder_Sent_Date_del__c.field-meta.xml
<CustomField>
    <fullName>Days_After_DOI_Reminder_Sent_Date_del__c</fullName>
    <label>Days After DOI Reminder Sent Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>