force-app/main/default/objects/Cleanup_Rules_Settings__c/fields/Days_for_Consumer_Deletes_Account__c.field-meta.xml
<CustomField>
    <fullName>Days_for_Consumer_Deletes_Account__c</fullName>
    <label>Days for Consumer Deletes Account</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>