force-app/main/default/objects/Cleanup_Rules_Settings__c/fields/Days_For_NoEmailSentToCustomer__c.field-meta.xml
<CustomField>
    <fullName>Days_For_NoEmailSentToCustomer__c</fullName>
    <label>Days For NoEmailSentToCustomer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>