force-app/main/default/objects/Cleanup_Rules_Settings__c/fields/Days_for_Request_to_be_Forgotten__c.field-meta.xml
<CustomField>
    <fullName>Days_for_Request_to_be_Forgotten__c</fullName>
    <label>Days for Request to be Forgotten</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>