force-app/main/default/objects/Cleanup_Rules_Settings__c/fields/Days_to_be_Added_after_DOI_Reminder_Send__c.field-meta.xml
<CustomField>
    <fullName>Days_to_be_Added_after_DOI_Reminder_Send__c</fullName>
    <label>Days to be Added after DOI Reminder Send</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>