force-app/main/default/objects/Cleanup_Rules_Settings__c/fields/Disable_portal_user__c.field-meta.xml
<CustomField>
    <fullName>Disable_portal_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable portal user</label>
    <type>Checkbox</type>
</CustomField>