force-app/main/default/objects/Cleanup_Rules_Settings__c/fields/Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>Query_Limit__c</fullName>
    <description>This is a text value added to the end of the batch query to avoid CPU timeout when we have huge amount of data</description>
    <inlineHelpText>This is a text value added to the end of the batch query to avoid CPU timeout when we have huge amount of data</inlineHelpText>
    <label>Query Limit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>