force-app/main/default/objects/Cleanup_Rules_Settings__c/fields/REST_URL_Del_ConKey__c.field-meta.xml
<CustomField>
    <fullName>REST_URL_Del_ConKey__c</fullName>
    <label>REST_URL_Del_ConKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>